# zkNotary

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vercel.json
aws/: README.md  aws_deploy.js
examples/node/: index.js  package-lock.json  package.json
o1js/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  writeup.md
o1js-verifier/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
o1js-verifier/src/: SessionHeader.ts  TlsnVerifier.ts
o1js/app/zknotary/: .env.example  .eslintrc.cjs  .gitignore  jest-resolver.cjs  jest.config.js  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
o1js/app/zknotary/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx  test.tsx
o1js/app/zknotary/src/components/: data-picker.tsx  examples-store.ts  header.tsx  main-section.tsx  proof-data-container.tsx  raw-data-container.tsx  verified-data-container.tsx
o1js/app/zknotary/src/components/core/: DescriptionSection.tsx  footer.tsx  main-section.tsx  nav-bar.tsx  test.tsx
o1js/app/zknotary/src/components/forms/: etherscan-form.tsx  github-form.tsx  index.ts
o1js/app/zknotary/src/components/mina/: local-toggle.tsx  mina-event-handler.tsx  network-dropdown.tsx  verify-transcript.tsx  wallet-section.tsx
o1js/app/zknotary/src/components/providers/: examples-provider.tsx  mina-provider.tsx
o1js/app/zknotary/src/comps/: dir.tsx
o1js/app/zknotary/src/lib/: constants.ts  proof_types.ts
o1js/app/zknotary/src/mina/: page.tsx  tlsn-verifier-provider.tsx  zkappWorker.ts  zkappWorkerClient.ts
o1js/app/zknotary/src/server/actions/: notarize_etherscan.ts  notarize_github.ts
o1js/app/zknotary/src/stores/: examples-store.ts  mina-store.ts
o1js/contracts/contracts/: .eslintrc.cjs  README.md  config.json  jest.config.ts  package.json  tsconfig.json  tsup.config.ts
o1js/contracts/contracts/src/: Proof.ts  SessionHeader.ts  SessionInfo.ts  TlsnVerifier.test.ts  TlsnVerifier.ts  index.ts  interact.ts  schemas.ts
o1js/contracts/contracts/tests/: TlsnVerifier.test.ts  invalid_proof.json  simple_proof.json  valid_proof.json
parsers/: README.md  package.json
parsers/src/twitter/: index.js
provers/: .env.example  Cargo.toml  README.md
provers/src/: discord_prover.rs  etherscan_prover.rs  github_prover.rs  main.rs  simple_prover.rs  twitter_dm_prover.rs  twitter_prover.rs  twitter_verifier.rs
src/: lib.rs
tlsn/: Cargo.toml
tlsn/zk_notary/: Cargo.toml
tlsn/zk_notary/aws_deployment/: aws_deploy.js
tlsn/zk_notary/src/: discord_prover.rs  main.rs  twitter_prover.rs
verifier/: Cargo.toml  README.md
verifier/examples/node/: README.md  index.js  package-lock.json  package.json  sample_proof.json
verifier/src/: lib.rs  utils.rs
