[package]
name = "zk_notary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
# tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", branch = "dev", features = ["tracing"] }
# tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
# tlsn-core = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
# tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
# tlsn-tls-client = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
# notary-server = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }

tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f", features = ["tracing"] }
tlsn-verifier = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f" } 
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f"}
tlsn-tls-core = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f"}
tlsn-tls-client = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f"}
notary-server = { git = "https://github.com/tlsnotary/tlsn", rev = "309c37f"}
mpz-core = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "ecb8c54" }
# 309c37f
futures = "0.3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-std",
    "fs",
] }
tokio-util = "0.7"

tracing = "0.1"
tracing-subscriber = "0.3"

hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"]}
http-body-util = "0.1"
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
webpki-roots = "0.23"

async-tls = { version = "0.12", default-features = false, features = [
    "client",
] }

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
rustls = { version = "0.21" }
rustls-pemfile = { version = "1.0.2" }
tokio-rustls = { version = "0.24.1" }
dotenv = "0.15.0"
url = "2.5.0"
