[package]
name = "zknotary-verifier"
version = "1.1.0"
authors = ["Rafael Campos <rafa@vixuslabs.com>", "Tito Thompson<tito@vixuslabs.com>"]
edition = "2018"
title = "zknotary-verifier"
description = "package for tlsn notary proof verification in wasm"
license = "Apache-2.0"
repository = "https://github.com/vixuslabs/zkNotary/tree/main/verifier"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = "0.2.84"
# tlsn-core = { git = "https://github.com/tlsnotary/tlsn", branch = "dev" }
tlsn-core = { git = "https://github.com/vixuslabs/tlsn", rev = "0caccc0" }
elliptic-curve = { version = "0.13.5", features = ["pkcs8"] }
serde_json = "1.0"
chrono = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
pem = "0.8.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
